[gd_scene load_steps=12 format=3 uid="uid://dnt2sd4mt6yw8"]

[ext_resource type="Script" uid="uid://dfrk5jfj3ogys" path="res://Scripts/UI/main_title.gd" id="1_3tovs"]
[ext_resource type="Texture2D" uid="uid://dwf4dbg8vqiqd" path="res://assets/UI/maintitle/bg-maintitle-01.png" id="2_um0kg"]
[ext_resource type="Texture2D" uid="uid://bwxn18efpuf7s" path="res://assets/UI/common/btn-level-normal-01.png" id="3_fraxl"]
[ext_resource type="Texture2D" uid="uid://rkoedninn4cu" path="res://assets/UI/common/btn-level-pressed-01.png" id="4_nb8ff"]
[ext_resource type="Texture2D" uid="uid://c6ru0ufa3c6xp" path="res://assets/UI/common/btn-level-hover-01.png" id="5_adb34"]
[ext_resource type="Texture2D" uid="uid://cdigl7d4s25p3" path="res://assets/UI/common/btn-level-disabled-01.png" id="6_h860p"]
[ext_resource type="FontFile" uid="uid://dc6bkofr1if2e" path="res://assets/fonts/CangErYuYangTiW05-2.ttf" id="7_wl6us"]
[ext_resource type="Texture2D" uid="uid://bmgip1e3l7qu0" path="res://assets/UI/maintitle/btn-other-normal-01.png" id="8_fraxl"]
[ext_resource type="Texture2D" uid="uid://hhrlu5odkkv1" path="res://assets/UI/maintitle/btn-other-pressed-01.png" id="9_nb8ff"]
[ext_resource type="Texture2D" uid="uid://5xdtdejhi11r" path="res://assets/UI/maintitle/btn-other-hover-01.png" id="10_adb34"]
[ext_resource type="Texture2D" uid="uid://ceqcch27fc2qw" path="res://assets/UI/maintitle/btn-other-disabled-01.png" id="11_h860p"]

[node name="MainTitle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3tovs")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_um0kg")

[node name="menu" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(600, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = 32.0
offset_right = 355.0
offset_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="menu"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="beginBtn" type="TextureButton" parent="menu/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_fraxl")
texture_pressed = ExtResource("4_nb8ff")
texture_hover = ExtResource("5_adb34")
texture_disabled = ExtResource("6_h860p")

[node name="startLabel" type="Label" parent="menu/VBoxContainer/beginBtn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -31.5
offset_right = 61.0
offset_bottom = 69.5
grow_horizontal = 2
grow_vertical = 2
rotation = -0.13962634
theme_override_fonts/font = ExtResource("7_wl6us")
theme_override_font_sizes/font_size = 80
text = "Ëøõ  ÂÖ•"

[node name="btn_Quit" type="TextureButton" parent="menu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("8_fraxl")
texture_pressed = ExtResource("9_nb8ff")
texture_hover = ExtResource("10_adb34")
texture_disabled = ExtResource("11_h860p")

[node name="quitLabel" type="Label" parent="menu/VBoxContainer/btn_Quit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.5
offset_top = -9.0
offset_right = 75.5
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.13962634
theme_override_fonts/font = ExtResource("7_wl6us")
theme_override_font_sizes/font_size = 40
text = "ÈÄÄÂá∫Ê∏∏Êàè"
horizontal_alignment = 1

[node name="Verson" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -148.0
offset_top = -46.0
offset_right = -32.0
offset_bottom = -22.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.33333334)
theme_override_font_sizes/font_size = 36
text = "ÂΩìÂâçÁâàÊú¨Âè∑Ôºö2k+Ôºà0.2.11.2Ôºâ"

[node name="player_info" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -600.0
offset_top = -146.0
offset_bottom = -77.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 50
text = "Name 38F"
horizontal_alignment = 1

[node name="cleannameButton" type="Button" parent="player_info"]
layout_mode = 0
offset_left = 484.0
offset_top = 9.0
offset_right = 547.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 40
text = "üìù"
flat = true

[node name="infoLabel" type="Label" parent="player_info"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -332.0
offset_top = 13.0
offset_right = 190.0
offset_bottom = 68.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.38795537, 0.3197254, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("7_wl6us")
theme_override_font_sizes/font_size = 40
text = "Ê≥®ÊÑèÔºöPlayerNameÂ∑≤‰∏∫Á©∫ÂÄº"
horizontal_alignment = 2

[connection signal="pressed" from="menu/VBoxContainer/btn_Quit" to="." method="_on_btn_quit_pressed"]
